[package]
name = "sdshout"
description = "Desktop notifications for systemd service failures"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/mjs/sdshout/"
license = "Apache-2.0"
readme = "README.md"
keywords =["systemd", "notify", "desktop", "dbus"]
categories = ["command-line-utilities"]

[dependencies]
dbus = "0.9.7"
eyre = "0.6.12"
