[package]
name = "sdshout"
description = "Desktop notifications for systemd service failures"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/mjs/sdshout/"
license = "Apache-2.0"
readme = "README.md"
keywords =["systemd", "notify", "desktop", "dbus"]
categories = ["command-line-utilities"]

[dependencies]
dbus = "0.9.7"
eyre = "0.6.12"
serde = { version = "1.0.209", features = ["std", "derive"] }
strum = "0.26.3"
strum_macros = "0.26.4"
toml = "0.8.19"
